Kubernet/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: frontend-cert
spec:
  rules:
    - host: 34.149.156.4.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend-service
                port:
                  number: 80
